--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "muzmatch/jade-php",
+    "name": "kylekatarnls/jade-php",
     "description": "HAML-like template engine for PHP 5.3",
     "keywords": ["jade", "minification", "template"],
     "homepage": "https://github.com/ronan-gloo/jade.php",
